--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       - "80:80"
     volumes_from:
       - backend
-
+    
   backend:
     build: backend
     depends_on:
@@ -25,12 +25,12 @@ services:
       - presta_db_data:/var/lib/mysql
     env_file:
       - local.env
-    expose:
-      - "3306"
+    # expose:
+    #   - "3306"
     # for debug db replace expose with those lines
-    # ports:
-    #   - 3306:3306
-    restart: always
+    ports:
+      - 3306:3306
+    # restart: always
 
 volumes:
   presta_db_data:
